# xianyu-auto-reply

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  EXE打包构建.bat  README.md  Start.py  XianyuAutoAsync.py  agent-ops  browser_direct.html  browser_test_page.html  build.sh  build_backend_web.sh  build_frontend.sh  build_scheduler.sh  build_websocket.sh  db_manager.py  debug_response.py  deploy.sh  deploy_remote.sh  docker-compose-cn.yml  docker-compose.yml  dockerfile  global_config.yml  install_playwright.py  package-lock.json  reply_server.py  requirements.txt  update.sh  xianyu_browser_embed.py  分类接口.txt  分类结果.txt  离线依赖打包.bat
backend-web/: .env.example  Dockerfile  _bootstrap.py  main.py  pyproject.toml  启动.bat
backend-web/app/api/: deps.py
backend-web/app/api/routes/: _exports.py  account_login_logs.py  activation.py  admin.py  advertisements.py  ai.py  announcements.py  api_cookie_renew_logs.py  auth.py  auto_rate.py  auto_reply_logs.py  blacklist.py  captcha.py  card_dock.py  cards.py  chat_customer_order.py  chat_new.py  chat_new_image.py  chat_new_ws.py  chat_quick_phrase.py  collect_fallback_account.py  confirm_receipt_messages.py  cookie_refresh.py  cookies.py  cookies_refresh_logs.py  data_analysis.py  db_backup_logs.py  default_replies.py  distribution.py  dm_fallback_account.py  external_cookie.py  face_verification.py  feedback.py  geetest.py  goofish_compass.py  goofish_crawler.py  goofish_tasks.py  health.py  items.py  keywords.py  (+27 more)
backend-web/app/core/: config.py  http_client.py  paths.py  security.py
backend-web/app/services/: account_export_service.py  account_import_service.py  account_login_log_service.py  account_service.py  ai_conversation_service.py  ai_listing_service.py  ai_listing_task_status_service.py  ai_reply_service.py  alipay_service.py  auth.py  auto_reply_log_service.py  auto_reply_stats_service.py  blacklist_service.py  card_dock_service.py  card_secret_key_service.py  card_service.py  dashboard_stats_cache_service.py  dashboard_stats_service.py  data_analysis_service.py  db_backup_log_service.py  default_reply_service.py  dock_record_service.py  email_service.py  fund_flow_service.py  goofish_crawler.py  item_service.py  jwt_secret_service.py  keyword_service.py  listing_monitor_service.py  notification_service.py  order_service.py  pickup_service.py  product_publish_service.py  publish_address_service.py  publish_batch_status_service.py  publish_execution_service.py  publish_image_service.py  recharge_service.py  remote_captcha_admission_service.py  remote_content_service.py  (+13 more)
backend-web/app/services/captcha/: _exports.py
backend-web/app/services/chat_new/: automation_bridge.py  avatar_service.py  im_client.py  im_session_manager.py  official_blacklist_service.py  push_message_parser.py
backend-web/app/services/compass/: goofish_compass.py
backend-web/app/services/password_login/: __init__.py  flow.py  manager.py
backend-web/app/services/qr_login/: face_verification.py  manager.py
backend-web/app/services/search/: browser.py  parser.py  searcher.py  slider_handler.py
promotion/backend/: .env.example  _bootstrap.py  pyproject.toml
promotion/backend/app/api/: _exports.py  deps.py
promotion/backend/app/api/routes/: auth.py  cookies.py  dashboard.py  delete_rule.py  geetest.py  health.py  material.py  product_rule.py  publish_rule.py  settings.py  taobao_alliance.py
promotion/backend/app/core/: config.py  security.py
promotion/backend/app/services/: auth_service.py  database_check_service.py  delete_rule_scheduler.py  delete_rule_service.py  item_delete_api_service.py  item_delete_sync_service.py  material_service.py  material_short_url_repair_scheduler.py  product_rule_scheduler.py  product_rule_service.py  publish_coupon_card_scheduler.py  publish_coupon_card_service.py  publish_rule_persistence_service.py  publish_rule_scheduler.py  publish_rule_service.py  published_item_id_repair_scheduler.py  taobao_alliance_detail.py  taobao_alliance_service.py
scheduler/: .env.example  Dockerfile  _bootstrap.py  main.py  pyproject.toml  启动.bat
scheduler/app/api/routes/: internal.py
scheduler/app/core/: config.py  http_client.py
scheduler/app/services/: cookies_refresh_browser_service.py  scheduled_task_service.py  scheduler_service.py
scheduler/app/services/scheduler/: api_cookie_renew_task.py  auto_order_task.py  cleanup_browser_data_task.py  close_notice_task.py  cookies_refresh_task.py  day_switch_task.py  db_backup_task.py  delivery_timeout_task.py  dm_send_task.py  fetch_items_task.py  fetch_orders_task.py  listing_monitor_task.py  login_renew_task.py  polish_task.py  rate_task.py  red_flower_task.py  redelivery_task.py  seller_fill_task.py  token_captcha_renewal.py  token_renewal_task.py
websocket/: .env.example  Dockerfile  _bootstrap.py  main.py  pyproject.toml  启动.bat
websocket/app/api/routes/: cookies_refresh.py  internal.py  password_login.py
websocket/app/core/: config.py  error_handlers.py
websocket/app/services/captcha/: _exports.py  concurrency.py  password_login_state.py  slider_stealth.py  xianyu_slider_stealth.py
websocket/app/services/shipping/: base.py  confirm_service.py  freeshipping_service.py
websocket/app/services/xianyu/: ai_reply_engine.py  auto_delivery_handler.py  auto_reply_log_service.py  auto_reply_service.py  connection_manager.py  cookie_manager.py  cookie_token_manager.py  cookies_refresh_service.py  delivery_utils.py  future_manager.py  message_handler.py  notification_dispatcher.py  notification_manager.py  rate_service.py  resource_manager.py  token_manager.py  utils.py  xianyu_async.py  yifan_api_handler.py
websocket/app/services/xianyu/delivery_rules/: __init__.py  base_rule.py  buyer_credit_rule.py  buyer_has_order_global_rule.py  buyer_has_order_rule.py  buyer_unconfirmed_rule.py  context.py  personal_blacklist_rule.py  rule_engine.py  rule_registry.py
websocket/app/services/xianyu/handlers/: __init__.py  message_router.py  order_status_handler.py  redelivery_handler.py
websocket/app/utils/: image_uploader.py
websocket/app/websocket/: manager.py
(+445 files in other folders)
