[project]
name = "xianyu-scheduler-service"
version = "0.1.0"
description = "闲鱼自动回复系统 - Scheduler服务"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncmy>=0.2.9",
    "pymysql>=1.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "loguru>=0.7.2",
    "apscheduler>=3.10.0",
    "anyio>=4.0.0",
    "sniffio>=1.3.0",
    "httpcore>=1.0.0",
    "h11>=0.14.0",
    "click>=8.1.0",
    "idna>=3.6",
    "certifi>=2023.11.0",
    "python-dateutil>=2.8.0",
    "playwright",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["logs*"]
